--- a/gb/19/9/25/n11546534.md
+++ b/gb/19/9/25/n11546534.md
@@ -1,55 +1,59 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/woywz155/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/woywz155/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/woywz155/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/woywz155/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/woywz155/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/woywz155/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/woywz155/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/woywz155/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/woywz155/www/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/woywz155/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/woywz155/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/woywz155/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>´ÓÓ°40Äê ÌÀÄ·¡¤ºº¿ËË¹»ñ½ðÇò½±ÖÕÉí³É¾Í½±</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1173020485-600x400.jpg" />
-<h6>ºÃÀ³ÎëÓ°ÐÇÌÀÄ·¡¤ºº¿ËË¹£¨Tom Hanks£©½üÕÕ¡£ (Frazer Harrison/Getty Images)
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒé¦–é¡µ" alt="å¤§çºªå…ƒé¦–é¡µ"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»" alt="å›½é™…æ–°é—»"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»" alt="å¤§é™†æ–°é—»"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/5.jpg" title="å¤§çºªå…ƒè¯„è®º" alt="å¤§çºªå…ƒè¯„è®º"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/6.jpg" title="ä¼ ç»Ÿæ–‡åŒ–" alt="ä¼ ç»Ÿæ–‡åŒ–"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/7.jpg" title="ç”Ÿæ´»æ¶ˆè´¹" alt="ç”Ÿæ´»æ¶ˆè´¹"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/8.jpg" title="å¨±ä¹ä¼‘é—²" alt="å¨±ä¹ä¼‘é—²"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/9.jpg" title="å¥åº·" alt="å¥åº·"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/10a.jpg" title="ç‹¬å®¶" alt="ç‹¬å®¶"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/12a.jpg" title="å¤´æ¡è¦é—»" alt="å¤´æ¡è¦é—»"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yxhgbq3433/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/yxhgbq3433/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>ä»Žå½±40å¹´ æ±¤å§†Â·æ±‰å…‹æ–¯èŽ·é‡‘çƒå¥–ç»ˆèº«æˆå°±å¥–</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1173020485-600x400.jpg" />
+<h6>å¥½èŽ±åžå½±æ˜Ÿæ±¤å§†Â·æ±‰å…‹æ–¯ï¼ˆTom Hanksï¼‰è¿‘ç…§ã€‚ (Frazer Harrison/Getty Images)
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê09ÔÂ26ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÙ¡Òà¼Ó×ÛºÏ±¨µ¼£©ÃÀ¹úÊ±¼ä9ÔÂ24ÈÕ£¬<a href="https://github.com/woywz155/djy/blob/master/gb/tag/%E9%87%91%E7%90%83%E5%A5%96.md">½ðÇò½±</a>Ö÷°ì·½ºÃÀ³ÎëÍâ¹ú¼ÇÕßÐ­»á£¨HFPA£©Ðû²¼£¬<a href="https://github.com/woywz155/djy/blob/master/gb/tag/%E6%B1%A4%E5%A7%86%C2%B7%E6%B1%89%E5%85%8B%E6%96%AF.md">ÌÀÄ·¡¤ºº¿ËË¹</a>£¨Tom Hanks£©½«±»ÊÚÓèµÚ77½ì<a href="https://github.com/woywz155/djy/blob/master/gb/tag/%E9%87%91%E7%90%83%E5%A5%96.md">½ðÇò½±</a><a href="https://github.com/woywz155/djy/blob/master/gb/tag/%E7%BB%88%E8%BA%AB%E6%88%90%E5%B0%B1%E5%A5%96.md">ÖÕÉí³É¾Í½±</a>ÈûÎ÷¶û¡¤´÷Ã×¶û½±£¨Cecil B. DeMille Award£©¡£´ÓÓ°40ÄêµÄµÄÌÀÄ·¡¤ºº¿ËË¹¹²»ñ8×ù½ðÇò½±¡¢15´ÎÌáÃû£¬½«ÔÚÃ÷Äê1ÔÂ5ÈÕ³öÏ¯µäÀñÁìÈ¡½±Ïî¡£</p>
-<p>¾ÝÃÀ¹ú¡¶×ÛÒÕ¡·£¨<em>Variety</em>£©ÔÓÖ¾ÍøÕ¾±¨µ¼£¬24ÈÕ£¬ºÃÀ³ÎëÍâ¹ú¼ÇÕßÐ­»áÖ÷Ï¯ÂåÂ××ô¡¤Ë÷ÀûÑÇ£¨Lorenzo Soria£©ÔÚ°ä½±¾ö¶¨ÖÐËµ£º¡°30¶àÄêÀ´£¬ËûÒÔ·á¸»ÓÐÈ¤µÄ½ÇÉ«ÎüÒý×Å¹ÛÖÚ£¬ÎÒÃÇ¶ÔËûµÄÈÈ°®ºÍÐÀÉÍÓÐÔöÎÞ¼õ£¬ËûÔÚÒøÄ»ÉÏÒ«ÑÛÎÞ±È£¬ËûÔÚÄ»ºóµ£ÈÎ±à¾ç¡¢ÖÆÆ¬¡¢µ¼ÑÝÒ²Í¬Ñù³öÉ«¡£ÎÒÃÇºÜÈÙÐÒ½«2020Äê<a href="https://github.com/woywz155/djy/blob/master/gb/tag/%E7%BB%88%E8%BA%AB%E6%88%90%E5%B0%B1%E5%A5%96.md">ÖÕÉí³É¾Í½±</a>ÊÚÓè<a href="https://github.com/woywz155/djy/blob/master/gb/tag/%E6%B1%A4%E5%A7%86%C2%B7%E6%B1%89%E5%85%8B%E6%96%AF.md">ÌÀÄ·¡¤ºº¿ËË¹</a>¡£¡±</p>
-<p>Õâ²¢²»ÊÇºº¿ËË¹»ñµÃµÄµÚÒ»¸öÖÕÉí³É¾Í½±£¬Ëû»¹ÔÚ2002Äê»ñµÃÃÀ¹úµçÓ°Ñ§»áÖÕÉí³É¾Í½±¡£´ËÍâ£¬Ëû»¹ÓÚ1994ÄêºÍ1995ÄêÆ¾½è¡¶·Ñ³Ç¹ÊÊÂ¡·£¨<em>Philadelphia</em>£©ºÍ¡¶°¢¸ÊÕý´«¡·£¨<em>Forrest Gump</em>£©Á¬ÐøÁ½Äê»ñµÃ°ÂË¹¿¨×î¼ÑÄÐÖ÷½Ç£¬³ÉÎª°ÂË¹¿¨Ê·ÉÏµÄµÚÒ»ÈË¡£</p>
-<p>ÌÀÄ·¡¤ºº¿ËË¹Ôø15´ÎÈëÎ§½ðÇò½±£¬ÇÒÆ¾½è¡¶·Ñ³Ç¹ÊÊÂ¡·¡¢¡¶°¢¸ÊÕý´«¡·¡¢¡¶»ÄµºÓàÉú¡·£¨<em>Cast Away</em>£¬¸ÛÒë£º½ÙºóÖØÉú£¬Ì¨Òë£ººÆ½ÙÖØÉú£©µÈ8´Î¶áµÃ½±Ïî¡£</p>
-<p>Ò»ÄêÒ»¶ÈµÄ½ðÇò½±£¬Ö¼ÔÚ±íÕÃÄÇÐ©¡°¶ÔÓéÀÖ½ç×ö³ö½Ü³ö¹±Ï×µÄÈË¡±£¬ËùÓÐ½±Ïî¶¼ÓÉ96Î»¼ÇÕßÍ¶Æ±²úÉú¡£</p>
-<p>´ËÇ°µÄ¡°ÖÕÉí³É¾Í½±¡±Ôø°ä¸øÇÇÖÎ¡¤¿ËÂ³Äá£¨George Clooney£©¡¢ÂÞ²®ÌØ¡¤µÂÄáÂÞ£¨Robert De Niro£©¡¢°Â÷ìÀö¡¤ºÕ±¾£¨Audrey Hepburn£©¡¢ÖìµÏ¡¤¸£Ë¹ÌØ£¨Jodie Foster£©¡¢Ë÷·Ææ«¡¤ÂÞÀ¼£¨Sophia Loren£©¡¢Î÷µÂÄá¡¤²¨µÙ°££¨Sidney Poitier£©¡¢Ê·µÙÎÄ¡¤Ë¹Æ¤¶û²®¸ñ£¨Steven Spielberg£©µÈ´óÅÆÃ÷ÐÇ¡£</p>
-<p>×î½üÁ½ÄêµÄ½ðÇò½±ÖÕÉí³É¾Í½±·Ö±ðÊÇ£ºÃÀ¹úµçÊÓÍÑ¿ÚÐãÖªÃûÖ÷³ÖÈË°ÂÆÕÀ­¡¤ÎÂ¸¥Àï£¨Oprah Winfrey£¬µÚ75½ì£©¡¢ÅõµÃ¹ý½ðÇò½±½±±­µÄ½Ü·ò¡¤²¼ÀïÆæË¹£¨Jeff Bridges£¬µÚ76½ì£©¡£</p>
-<p>µÚ77½ì½ðÇò½±°ä½±µäÀñ½«ÓÚÃÀ¹ú¶«²¿Ê±¼ä2020Äê1ÔÂ5ÈÕÍí8µãÔÚNBCÏÖ³¡Ö±²¥¡£</p>
-<p>ÔðÈÎ±à¼­£ºÑîÃ÷</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´09æœˆ26æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…ä½Ÿäº¦åŠ ç»¼åˆæŠ¥å¯¼ï¼‰ç¾Žå›½æ—¶é—´9æœˆ24æ—¥ï¼Œ<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E9%87%91%E7%90%83%E5%A5%96.md#1">é‡‘çƒå¥–</a>ä¸»åŠžæ–¹å¥½èŽ±åžå¤–å›½è®°è€…åä¼šï¼ˆHFPAï¼‰å®£å¸ƒï¼Œ<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E6%B1%A4%E5%A7%86%C2%B7%E6%B1%89%E5%85%8B%E6%96%AF.md#1">æ±¤å§†Â·æ±‰å…‹æ–¯</a>ï¼ˆTom Hanksï¼‰å°†è¢«æŽˆäºˆç¬¬77å±Š<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E9%87%91%E7%90%83%E5%A5%96.md#1">é‡‘çƒå¥–</a><ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E7%BB%88%E8%BA%AB%E6%88%90%E5%B0%B1%E5%A5%96.md#1">ç»ˆèº«æˆå°±å¥–</a>å¡žè¥¿å°”Â·æˆ´ç±³å°”å¥–ï¼ˆCecil B. DeMille Awardï¼‰ã€‚ä»Žå½±40å¹´çš„çš„æ±¤å§†Â·æ±‰å…‹æ–¯å…±èŽ·8åº§é‡‘çƒå¥–ã€15æ¬¡æåï¼Œå°†åœ¨æ˜Žå¹´1æœˆ5æ—¥å‡ºå¸­å…¸ç¤¼é¢†å–å¥–é¡¹ã€‚</p>
+<p>æ®ç¾Žå›½ã€Šç»¼è‰ºã€‹ï¼ˆ<em>Variety</em>ï¼‰æ‚å¿—ç½‘ç«™æŠ¥å¯¼ï¼Œ24æ—¥ï¼Œå¥½èŽ±åžå¤–å›½è®°è€…åä¼šä¸»å¸­æ´›ä¼¦ä½Â·ç´¢åˆ©äºšï¼ˆLorenzo Soriaï¼‰åœ¨é¢å¥–å†³å®šä¸­è¯´ï¼šâ€œ30å¤šå¹´æ¥ï¼Œä»–ä»¥ä¸°å¯Œæœ‰è¶£çš„è§’è‰²å¸å¼•ç€è§‚ä¼—ï¼Œæˆ‘ä»¬å¯¹ä»–çš„çƒ­çˆ±å’Œæ¬£èµæœ‰å¢žæ— å‡ï¼Œä»–åœ¨é“¶å¹•ä¸Šè€€çœ¼æ— æ¯”ï¼Œä»–åœ¨å¹•åŽæ‹…ä»»ç¼–å‰§ã€åˆ¶ç‰‡ã€å¯¼æ¼”ä¹ŸåŒæ ·å‡ºè‰²ã€‚æˆ‘ä»¬å¾ˆè£å¹¸å°†2020å¹´<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E7%BB%88%E8%BA%AB%E6%88%90%E5%B0%B1%E5%A5%96.md#1">ç»ˆèº«æˆå°±å¥–</a>æŽˆäºˆ<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E6%B1%A4%E5%A7%86%C2%B7%E6%B1%89%E5%85%8B%E6%96%AF.md#1">æ±¤å§†Â·æ±‰å…‹æ–¯</a>ã€‚â€</p>
+<p>è¿™å¹¶ä¸æ˜¯æ±‰å…‹æ–¯èŽ·å¾—çš„ç¬¬ä¸€ä¸ªç»ˆèº«æˆå°±å¥–ï¼Œä»–è¿˜åœ¨2002å¹´èŽ·å¾—ç¾Žå›½ç”µå½±å­¦ä¼šç»ˆèº«æˆå°±å¥–ã€‚æ­¤å¤–ï¼Œä»–è¿˜äºŽ1994å¹´å’Œ1995å¹´å‡­å€Ÿã€Šè´¹åŸŽæ•…äº‹ã€‹ï¼ˆ<em>Philadelphia</em>ï¼‰å’Œã€Šé˜¿ç”˜æ­£ä¼ ã€‹ï¼ˆ<em>Forrest Gump</em>ï¼‰è¿žç»­ä¸¤å¹´èŽ·å¾—å¥¥æ–¯å¡æœ€ä½³ç”·ä¸»è§’ï¼Œæˆä¸ºå¥¥æ–¯å¡å²ä¸Šçš„ç¬¬ä¸€äººã€‚</p>
+<p>æ±¤å§†Â·æ±‰å…‹æ–¯æ›¾15æ¬¡å…¥å›´é‡‘çƒå¥–ï¼Œä¸”å‡­å€Ÿã€Šè´¹åŸŽæ•…äº‹ã€‹ã€ã€Šé˜¿ç”˜æ­£ä¼ ã€‹ã€ã€Šè’å²›ä½™ç”Ÿã€‹ï¼ˆ<em>Cast Away</em>ï¼Œæ¸¯è¯‘ï¼šåŠ«åŽé‡ç”Ÿï¼Œå°è¯‘ï¼šæµ©åŠ«é‡ç”Ÿï¼‰ç­‰8æ¬¡å¤ºå¾—å¥–é¡¹ã€‚</p>
+<p>ä¸€å¹´ä¸€åº¦çš„é‡‘çƒå¥–ï¼Œæ—¨åœ¨è¡¨å½°é‚£äº›â€œå¯¹å¨±ä¹ç•Œåšå‡ºæ°å‡ºè´¡çŒ®çš„äººâ€ï¼Œæ‰€æœ‰å¥–é¡¹éƒ½ç”±96ä½è®°è€…æŠ•ç¥¨äº§ç”Ÿã€‚</p>
+<p>æ­¤å‰çš„â€œç»ˆèº«æˆå°±å¥–â€æ›¾é¢ç»™ä¹”æ²»Â·å…‹é²å°¼ï¼ˆGeorge Clooneyï¼‰ã€ç½—ä¼¯ç‰¹Â·å¾·å°¼ç½—ï¼ˆRobert De Niroï¼‰ã€å¥¥é»›ä¸½Â·èµ«æœ¬ï¼ˆAudrey Hepburnï¼‰ã€æœ±è¿ªÂ·ç¦æ–¯ç‰¹ï¼ˆJodie Fosterï¼‰ã€ç´¢è²å¨…Â·ç½—å…°ï¼ˆSophia Lorenï¼‰ã€è¥¿å¾·å°¼Â·æ³¢è’‚åŸƒï¼ˆSidney Poitierï¼‰ã€å²è’‚æ–‡Â·æ–¯çš®å°”ä¼¯æ ¼ï¼ˆSteven Spielbergï¼‰ç­‰å¤§ç‰Œæ˜Žæ˜Ÿã€‚</p>
+<p>æœ€è¿‘ä¸¤å¹´çš„é‡‘çƒå¥–ç»ˆèº«æˆå°±å¥–åˆ†åˆ«æ˜¯ï¼šç¾Žå›½ç”µè§†è„±å£ç§€çŸ¥åä¸»æŒäººå¥¥æ™®æ‹‰Â·æ¸©å¼—é‡Œï¼ˆOprah Winfreyï¼Œç¬¬75å±Šï¼‰ã€æ§å¾—è¿‡é‡‘çƒå¥–å¥–æ¯çš„æ°å¤«Â·å¸ƒé‡Œå¥‡æ–¯ï¼ˆJeff Bridgesï¼Œç¬¬76å±Šï¼‰ã€‚</p>
+<p>ç¬¬77å±Šé‡‘çƒå¥–é¢å¥–å…¸ç¤¼å°†äºŽç¾Žå›½ä¸œéƒ¨æ—¶é—´2020å¹´1æœˆ5æ—¥æ™š8ç‚¹åœ¨NBCçŽ°åœºç›´æ’­ã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šæ¨æ˜Ž</p>
+	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/9/25/n11546534.htm">´ÓÓ°40Äê ÌÀÄ·¡¤ºº¿ËË¹»ñ½ðÇò½±ÖÕÉí³É¾Í½±</a>
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/4/14/n11185650.htm">ÂåÉ¼í¶Ò»Æ±ÄÑÇó ½ðÇò½±°¬ÃÀ½±µÃÖ÷ÆëÔÞÉñÔÏ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/7/n10960001.htm">º«Òá¼ÓÄÃ´óÅ®ÑÝÔ±ÎâÉº×¿Ó®½ðÇò½±ÊÓºó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/7/n10959269.htm">¡¶ÂÌÆ¤Êé¡·»ñÈýÏî´ó½± Îª76½ì½ðÇò½±´óÓ®¼Ò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/7/n10958042.htm">µÚ76½ì½ðÇò½±½ÒÏþ ÎâÉº×¿ÈÙâß¾çÇéÀàÊÓºó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/7/n10958101.htm">×éÍ¼£ºµÚ76½ì½ðÇò½±°ä½±Àñ ºìÌºÐÇ¹âìÚìÚ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/6/n10957666.htm">½Ü·ò¡¤²¼Àï¼ªË¹»ñµÚ76½ì½ðÇò½±ÖÕÉí³É¾Í½±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/12/7/n10896941.htm">¡¶ÂÌÆ¤Êé¡·»ñ½ðÇò½±ÌáÃû Á½Î»ÄÐÖ÷½ÇË«ÈëÎ§</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/12/7/n10895990.htm">µÚ76½ì½ðÇò½±ÌáÃû¹«²¼¡¶¸±×ÜÍ³¡·ÒÔÁùÏîÁìÅÜ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/12/4/n10890252.htm">ÄªµÂÀïÆæ»ñ½ðÇò½± ´òÆÆÃ·Î÷CÂÞ10ÄêÂ¢¶Ï</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/10/10/n11581115.htm">ÖÆÔìËàÉ±¿Ö²À ÖÐ¹²¹«¿ª½±Àø×²ÈËË¾»ú52Íò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/10/n11580996.htm">Àî¼Î³ÏÔÙÅ×´óÁ¬×Ê²ú ÈÚ´´40ÒÚÔª½ÓÅÌ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/10/n11581259.htm">Ã³Ò×Ì¸ÅÐ½øÕ¹ºÜË³Àû ´¨ÆÕÖÜÎåÏÂÎç¼ûÁõº×</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/10/n11581114.htm">»ªÎªMate30ÎªºÎÔÚÖÐ¹úÂô²»¹ýiPhone 11£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/29/n11554590.htm">Ô¤ÑÔÖÐµÄÖÐ¹²ÃðÍöÊ±¼ä¼°Ç°ºóÖØ´óÊÂ¼þ£¨ÏÂ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/4/n11568273.htm">±»Çú½âµÄ³ÉÓï£ºñºñ»ÊçÅ®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/2/n11563658.htm">´«Ææ²ÅÅ®ÕÅ°®ÁáÌÓµ½Ïã¸ÛµÄÇ°Ç°ºóºó£¨ÏÂ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/23/n11539994.htm">¿µÎõ»ÊµÛÐ´µÃÒ»ÊÖºÃ×Ö ÓÐÊ²Ã´ÇÏÃÅ£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11577534.htm">ÑÛÁ¦´ó¿¼Ñé ÄãÄÜÔÚÕâÕÅÕÕÆ¬ÖÐÕÒµ½±ª×ÓÂð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/8/n11576651.htm">¡¶À¶²¨£º×îºóÒ»µÎÑª¡·Ó°ÆÀ£ºÒ»´ú´«ÆæÍêÃÀÐ»Ä»</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11577364.htm">Ö±´¥ÖÐ¹²½û¼É ¡¶ÄÏ·½ËÄ¼ú¿Í¡·Á¬µÀÇ¸¶¼³¬Ëá</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11578053.htm">ÖÓÐÀÁèÇÃÏì½ðÖÓºó ÏÂ²¿Ï·½«ÓëÍõÉÙÎ°ÑÝÄ¸×Ó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/10/n11580934.htm">·íÖÐ¹²»îÕªÆ÷¹Ù Ò½Ê¦£ºÄÏ·½¹«Ô°ÓÃ´Ê¾«È·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11577274.htm">¡¾Ê®×ÖÂ·¿Ú¡¿ÖÐ¹²¿ñ¹¥NBA ¼¤»¯ÃÀÖÐ¶Ô¿¹</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/10/n11580854.htm">¡¾ÐÂÎÅ¿´µã¡¿Áõº×ÅÎ¼û´¨ÆÕ Ã³Ì¸ÈÔÒõÇçÄÑ¶¨</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/6/18/n10494192.htm">¡¾Ãû¾ä¹ÊÊÂ¡¿ÊÔÓñÒªÉÕÈýÈÕÂú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11577534.htm">ÑÛÁ¦´ó¿¼Ñé ÄãÄÜÔÚÕâÕÅÕÕÆ¬ÖÐÕÒµ½±ª×ÓÂð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11578774.htm">±©Ñ©ÓéÀÖÏòÖÐ¹²ßµÍ· È«ÇòÓÎÏ·ÉçÍÅÈºÆðµÖÖÆ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/9/n11577528.htm">·ÖÎö£ºÁõº×´Ë´Î¸°ÃÀµÄÈý¸ö²»Ñ°³£Ö®´¦</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/12/4/n10890252.md#1">èŽ«å¾·é‡Œå¥‡èŽ·é‡‘çƒå¥– æ‰“ç ´æ¢…è¥¿Cç½—10å¹´åž„æ–­</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/12/7/n10895990.md#1">ç¬¬76å±Šé‡‘çƒå¥–æåå…¬å¸ƒã€Šå‰¯æ€»ç»Ÿã€‹ä»¥å…­é¡¹é¢†è·‘</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/12/7/n10896941.md#1">ã€Šç»¿çš®ä¹¦ã€‹èŽ·é‡‘çƒå¥–æå ä¸¤ä½ç”·ä¸»è§’åŒå…¥å›´</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/1/6/n10957666.md#1">æ°å¤«Â·å¸ƒé‡Œå‰æ–¯èŽ·ç¬¬76å±Šé‡‘çƒå¥–ç»ˆèº«æˆå°±å¥–</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/woywz155/djy/blob/master/gb/19/9/25/n11546534.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/woywz155/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/woywz155/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/woywz155/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/woywz155/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/woywz155/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/10/n10965703.md#1" target="_blank">å…±äº§æš´æ”¿å½•ï¼šå¹¿è¥¿æ–‡é©å¤§å± æ€äº‹ä»¶</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/23/n11741117.md#1" target="_blank">ä¸­å…±ä¾µçŠ¯å®—æ•™è‡ªç”± ç¾Žå›½å®£å¸ƒå°†æŒç»­è¿½è´£</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/1/26/n12711986.md#1">é¢„è¨€è¯•æžï¼šå…±äº§å…šäº¡äºŽä½•æ—¶ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/1/30/n12723183.md#1">ã€è§£å¯†æ—¶åˆ†ã€‘æ‡‚å¾—é¸Ÿè¯­ åŽ†å²ä¸ŠçœŸæœ‰è¿™æ ·çš„äºº</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/20/12/29/n12651261.md#1">è½®å›žè½¬ç”Ÿ å†¤å®¶å˜æˆæ¯å­</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/1/18/n12695507.md#1">ã€å‘½ç†ã€‘è¢«å†¤æž‰é™·å®³çš„å¥½äºº çš‡å¤©èƒ½ä¸ç®¡å—ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12728948.md#1">ã€è§£å¯†æ—¶åˆ†ã€‘æ–¯é‡Œå…°å¡å‰æ€»ç»Ÿè½¬ä¸–å†œå®¶ç”·å­©</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/4/n12731595.md#1">æ—©ä¸Šèµ·åºŠåš1ä»¶äº‹ è¿œç¦»è¿‡æ•æ€§é¼»ç‚Ž</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/4/n12731708.md#1">ã€çè¨€çœŸè¯­ã€‘åçº¢åª’æ¸—é€ éƒ‘æ•¬åŸºåŠ å›½åˆ›æ¸¯äººç”µå°</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/3/n12731260.md#1">ã€è§£å¯†æ—¶åˆ†ã€‘24äº¿ç¾Žå…ƒ å²ä¸Šåå¤§æœ€è´µæˆ˜æœº</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727425.md#1">æŽ¥å—å‘åž‹å¸ˆä¹‰å‰ª æµæµªæ±‰ç§’å˜ç»…å£«ç”·éœ‡æƒŠç½‘å‹</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12726784.md#1">ã€ç§¦é¹ç›´æ’­ã€‘ç¼…å†›æ–¹æŠ“æ˜‚å±±ç´ å­£ æ€¥åæ‹œç™»ä¹ è¿‘å¹³ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12728478.md#1">ä¸­å…±å®˜åª’ç¾¤æ‰¹â€œåŽ•æ‰€é©å‘½â€æ‰“äº†è°çš„è„¸ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/3/n12729203.md#1">é»Žå§¿æºä¸‰ä¸ªå¥³å„¿è¡Œå±± ç²‰ä¸æ„å¤–èšç„¦ä¸€åŒæ³¢éž‹</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12726330.md#1">51å²å‘¨ä¼ é›„ç™»é™†ç»¼ 22å²å­Ÿç¾Žå²å½“å¯¼å¸ˆå¼•ç‹‚æ‰¹</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12726845.md#1">é‡‘é©¬å½±åŽé©¬æ€çº¯ç–‘æ‚£æŠ‘éƒç—‡ åœå·¥åŠå¹´åŽé¦–å‘å£°</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12728875.md#1">èŽ·é™ˆå¤å¤¸èµžé˜³å…‰åˆæ¼‚äº® æ¨é¢–é»˜é»˜ç‚¹èµžè§†é¢‘è‡ªåŠ±</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727150.md#1">ç«‹ç™¾ç—…æ¯’è‡´æ­»çŽ‡é«˜ ä¸“å®¶ç¤ºè­¦ä¸‹ä¸€åœºå¤§æµè¡Œå¨èƒ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12726617.md#1">è¿™æ—¶å–æ°´æŽ’æ¯’å¿«ï¼æ—©æ™šå–å¯¹æ°´å…»ç”Ÿ è¿˜èƒ½æŽ§è¡€ç³–</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727769.md#1">è‹±å†›æˆ˜æœºç©ºè¢­ä¼Šæ‹‰å…‹æ´žç©´ å‡†ç¡®æ­¼ç­ISæˆå‘˜</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12724829.md#1">ä¹Œå…‹å…°ç½‘çº¢æ¯å¤©ç©¿19ä¸–çºªæœè£… å¦‚å¤å…¸ç¾Žäºº</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727507.md#1">2021å¹´2æœˆæ˜¯ä¸ªå®Œç¾ŽçŸ©å½¢ ä¼šæœ‰å¤§äº‹å‘ç”Ÿå—ï¼Ÿ</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/yxhgbq3433/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/yxhgbq3433/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/9/25/n11546534.htm">ä»Žå½±40å¹´ æ±¤å§†Â·æ±‰å…‹æ–¯èŽ·é‡‘çƒå¥–ç»ˆèº«æˆå°±å¥–</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yxhgbq3433/djy/blob/master/gb/19/9/25/n11546534.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/yxhgbq3433/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/yxhgbq3433/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
